# delphi-examples

./: .envrc  CMakeLists.txt  README.md
cmake/: FindDelphi.cmake
example01/: CMakeLists.txt  example01.cra.in
example02/: CMakeLists.txt  example02.car  example02.cra.in
example03/: CMakeLists.txt  example03.car  example03.cra.in
example04/: CMakeLists.txt  example04.cxx
example05/: Analysis05.cxx  Analysis05.hxx  CMakeLists.txt  SkelanaAnalysis.cxx  SkelanaAnalysis.hxx  example05.cxx
example06/: Analysis06.cxx  Analysis06.hxx  CMakeLists.txt  example06.cxx
include/: PhdstAnalysis.cxx  PhdstAnalysis.hxx  SkelanaAnalysis.hxx  phdst.hxx  skelana.hxx
scripts/: example01.sh  example03.sh  run.sh
src/: PhdstAnalysis.cxx  SkelanaAnalysis.cxx
